--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     <title>A tribute to Tim Berners-Lee</title>
   </head>
   <body>
-      <main id="main">
-          <h1 id="title">Tim Berners-Lee</h1>
-          <p>The inventor of World Wide Web</p>
-      </main>
+    <main id="main">
+      <h1 id="title">Tim Berners-Lee</h1>
+      <p>The inventor of World Wide Web</p>
+      <figure id="img-div">
+        <img
+          id="image"
+          src="/images/Tim Berners-Lee.webp"
+          alt="Sir Timothy John Berners-Lee"
+        />
+        <figcaption id="img-caption">
+          Web Inventor and Founding Director of the World Wide Web Foundation
+        </figcaption>
+      </figure>
+    </main>
   </body>
 </html>
