--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           alt="Sir Timothy John Berners-Lee"
         />
         <figcaption id="img-caption">
-          Web Inventor and Founding Director of the World Wide Web Foundation
+          Tim Berners-Lee, Web Inventor and Founding Director of the World Wide Web Foundation
         </figcaption>
       </figure>
       <section id="tribute-info">
@@ -117,7 +117,7 @@
             id="tribute-link"
             href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"
             target="_blank"
-            >wikipedia entry.</a
+            >Wikipedia entry.</a
           >
         </h3>
       </section>
