add styling to body

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           alt="Sir Timothy John Berners-Lee"
         />
         <figcaption id="img-caption">
-          Tim Berners-Lee, Web Inventor and Founding Director of the World Wide Web Foundation
+          Tim Berners-Lee, Web Inventor and Founding Director of the World Wide
+          Web Foundation
         </figcaption>
       </figure>
       <section id="tribute-info">
