--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
           cite="https://www.brainyquote.com/citation/quotes/tim_bernerslee_373125"
         >
           <p>
-            We could say we want the Web to reflect a vision of the world where
+            " We could say we want the Web to reflect a vision of the world where
             everything is done democratically. To do that, we get computers to
-            talk with each other in such a way as to promote that ideal.
+            talk with each other in such a way as to promote that ideal. "
           </p>
-          <cite>Tim Berners-Lee</cite>
+          <cite>-- Tim Berners-Lee</cite>
         </blockquote>
         <h3>
           If you have time, you should read more about this incredible man who
